(chore): adjust vite config

--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "@yardinternet/brave-frontend-kit",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "main": "dist/brave-frontend-kit.umd.cjs",
-  "module": "dist/brave-frontend-kit.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yardinternet/brave-frontend-kit.git"
-  },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@yardinternet"
-  },
-  "scripts": {
-    "start": "tsc && vite build",
-    "build": "tsc && vite build"
-  },
-  "devDependencies": {
-    "@yardinternet/prettier-config": "^1.0.2",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0"
-  }
+	"name": "@yardinternet/brave-frontend-kit",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"main": "dist/brave-frontend-kit.umd.cjs",
+	"module": "dist/brave-frontend-kit.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yardinternet/brave-frontend-kit.git"
+	},
+	"files": [
+		"dist"
+	],
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com/@yardinternet"
+	},
+	"scripts": {
+		"start": "WATCH=true vite build",
+		"build": "vite build"
+	},
+	"devDependencies": {
+		"@yardinternet/prettier-config": "^1.0.2",
+		"typescript": "~5.7.2",
+		"vite": "^6.2.0"
+	}
 }
