--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -23,6 +23,8 @@ jobs:
 
             - name: Install dependencies
               run: npm ci
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Build package
               run: npm run build
