--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 	},
 	"scripts": {
 		"start": "WATCH=true vite build",
-		"build": "vite build"
+		"build": "vite build",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@yardinternet/prettier-config": "^1.0.2",
 		"typescript": "~5.7.2",
-		"vite": "^6.2.0"
+		"vite": "^6.2.0",
+		"vitest": "^3.1.1"
 	}
 }
