--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -5,6 +5,16 @@ on:
         types: [created]
 
 jobs:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
+              with:
+                  node-version: 18
+            - run: npm ci
+            - run: npm test
+
     publish-gpr:
         runs-on: ubuntu-latest
         permissions:
@@ -25,9 +35,6 @@ jobs:
               run: npm ci
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Build package
-              run: npm run build
 
             - name: Publish to GitHub Packages
               run: npm publish
