--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,9 +11,11 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: 18
+                  node-version: 22
             - run: npm ci
             - run: npm test
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     publish-gpr:
         runs-on: ubuntu-latest
