--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,31 +14,19 @@ jobs:
                   node-version: 22
             - run: npm ci
             - run: npm test
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     publish-gpr:
+        needs: build
         runs-on: ubuntu-latest
         permissions:
             packages: write
             contents: read
-
         steps:
-            - name: Checkout code
-              uses: actions/checkout@v3
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v3
+            - uses: actions/checkout@v3
+            - uses: actions/setup-node@v3
               with:
                   node-version: 22
                   registry-url: https://npm.pkg.github.com/
-
-            - name: Install dependencies
-              run: npm ci
+            - run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Publish to GitHub Packages
-              run: npm publish
-              env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
