--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,6 +14,8 @@ jobs:
                   node-version: 22
             - run: npm ci
             - run: npm test
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
     publish-gpr:
         needs: build
@@ -27,6 +29,7 @@ jobs:
               with:
                   node-version: 22
                   registry-url: https://npm.pkg.github.com/
+            - run: npm ci
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
