--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 22
+                  registry-url: https://npm.pkg.github.com/
             - run: npm ci
             - run: npm test
               env:
