(chore): change release-package.yml

--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,9 +14,9 @@ jobs:
                   node-version: 22
                   registry-url: https://npm.pkg.github.com/
             - run: npm ci
-            - run: npm test
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+            - run: npm test
 
     publish-gpr:
         needs: build
@@ -31,6 +31,8 @@ jobs:
                   node-version: 22
                   registry-url: https://npm.pkg.github.com/
             - run: npm ci
+              env:
+                  NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
