(feat): add tests to FocusStyle

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@yardinternet/prettier-config": "^1.0.2",
+		"jsdom": "^26.1.0",
 		"typescript": "~5.7.2",
 		"vite": "^6.2.0",
 		"vitest": "^3.1.1"
