--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
 	},
 	"devDependencies": {
 		"@yardinternet/prettier-config": "^1.0.2",
+		"@yardinternet/toolkit": "^1.0.3",
 		"jsdom": "^26.1.0",
 		"typescript": "~5.7.2",
 		"vite": "^6.2.0",
 		"vitest": "^3.1.1"
-	},
-	"dependencies": {
-		"@yardinternet/toolkit": "^1.0.3"
 	}
 }
