--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
 		"typescript": "~5.7.2",
 		"vite": "^6.2.0",
 		"vitest": "^3.1.1"
+	},
+	"dependencies": {
+		"body-scroll-lock": "^4.0.0-beta.0",
+		"focus-trap": "^7.6.5"
 	}
 }
