--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"format": "yard-toolkit format js -m custom './src/**/*.{ts,js}'"
 	},
 	"devDependencies": {
+		"@types/body-scroll-lock": "^3.1.2",
 		"@yardinternet/prettier-config": "^1.0.2",
 		"@yardinternet/toolkit": "^1.0.3",
 		"jsdom": "^26.1.0",
