--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"start": "WATCH=true vite build",
 		"build": "vite build",
 		"test": "vitest",
-		"format": "yard-toolkit format js -m custom './src/**/*.{ts,js}'"
+		"format": "yard-toolkit format js -m custom './src/**/*.ts'",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@types/body-scroll-lock": "^3.1.2",
 		"@yardinternet/prettier-config": "^1.0.2",
 		"@yardinternet/toolkit": "^1.0.3",
+		"husky": "^9.1.7",
 		"jsdom": "^26.1.0",
 		"typescript": "~5.7.2",
 		"vite": "^6.2.0",
