--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 	},
 	"devDependencies": {
 		"@types/body-scroll-lock": "^3.1.2",
+		"@wordpress/scripts": "^31.0.0",
 		"@yardinternet/prettier-config": "^1.0.2",
 		"@yardinternet/toolkit": "^1.0.3",
+		"eslint-import-resolver-typescript": "^4.4.4",
 		"husky": "^9.1.7",
 		"jsdom": "^26.1.0",
 		"typescript": "~5.7.2",
