--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"vitest": "^3.1.1"
 	},
 	"dependencies": {
+		"accordion-js": "^3.4.1",
 		"body-scroll-lock": "^4.0.0-beta.0",
 		"focus-trap": "^7.6.5",
 		"headroom.js": "^0.12.0"
