--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@types/body-scroll-lock": "^3.1.2",
+		"@types/headroom.js": "^0.12.4",
 		"@wordpress/scripts": "^31.0.0",
 		"@yardinternet/prettier-config": "^1.0.2",
 		"@yardinternet/toolkit": "^1.0.3",
@@ -37,6 +38,7 @@
 	},
 	"dependencies": {
 		"body-scroll-lock": "^4.0.0-beta.0",
-		"focus-trap": "^7.6.5"
+		"focus-trap": "^7.6.5",
+		"headroom.js": "^0.12.0"
 	}
 }
