--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,8 @@ updates:
         patterns:
           - "*"
     commit-message:
-      prefix: "chore(deps): "
+      prefix: "chore"
+      include: "scope"
 
   - package-ecosystem: 'npm'
     directory: '/'
@@ -27,7 +28,8 @@ updates:
         patterns:
           - "*"
     commit-message:
-      prefix: "chore(deps): "
+      prefix: "chore"
+      include: "scope"
     versioning-strategy: lockfile-only
 
 registries:
